--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SocksDroid</string>
+    <string name="app_name">SocksDroid csnet</string>
 
     <string name="profile">Profile</string>
     <string name="prof_default">Default</string>
 
     <string name="connection">Connection</string>
     <string name="server_ip">Server IP</string>
-    <string name="server_port">Server Port</string>
+    <string name="server_port">Local Port</string>
     <string name="ipv6_proxy">IPv6</string>
     <string name="ipv6_proxy_sum">Enable IPv6 forwarding. If the server supports IPv6, you can access IPv6 contents from IPv4 network with this enabled.</string>
     <string name="udp_proxy">UDP Forwarding</string>
@@ -23,7 +23,7 @@
     <string name="advanced">Advanced</string>
     <string name="adv_route">Route</string>
     <string name="adv_route_all">All (Default)</string>
-    <string name="adv_route_non_chn">Non-Chinese IPs</string>
+    <string name="adv_route_non_chn">Non-Chinese IPs (not available at current version)</string>
     <string name="adv_dns">DNS Server</string>
     <string name="adv_dns_port">DNS Port (TCP)</string>
     <string name="adv_auto_connect">Connect on Boot</string>
