--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SocksDroid csnet</string>
+    <string name="app_name">CSNetDroid</string>
 
     <string name="profile">配置文件</string>
     <string name="prof_default">默认</string>
@@ -12,7 +12,7 @@
     <string name="ipv6_proxy">IPv6</string>
     <string name="ipv6_proxy_sum">启用IPv6转发。如果服务器支持IPv6，启用该选项后你可以通过IPv4网络访问IPv6内容。</string>
     <string name="udp_proxy">UDP转发</string>
-    <string name="udp_proxy_sum">通过SOCKS5将UDP数据包转发到badvpn-udpgw。该功能需要远程服务器运行badvpn-udpgw才能生效（监听在127.0.0.1即可）。</string>
+    <string name="udp_proxy_sum">通过CSNet将UDP数据包转发到badvpn-udpgw。该功能需要远程服务器运行badvpn-udpgw才能生效（监听在127.0.0.1即可）。</string>
     <string name="udp_gw">远程UDP网关</string>
 
     <string name="authentication">认证方式</string>
@@ -40,7 +40,7 @@
 
     <string name="err_add_prof">新增配置失败：%s</string>
     <string name="err_del_prof">删除配置失败：%s</string>
-    <string name="notify_title">SOCKS5代理已启用</string>
+    <string name="notify_title">CSNet代理已启用</string>
     <string name="notify_msg">已连接到%s</string>
     <string name="channel_name">代理启用通知</string>
 
