--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SocksDroid csnet</string>
+    <string name="app_name">CSNetDroid</string>
 
     <string name="profile">Profile</string>
     <string name="prof_default">Default</string>
@@ -12,7 +12,7 @@
     <string name="ipv6_proxy">IPv6</string>
     <string name="ipv6_proxy_sum">Enable IPv6 forwarding. If the server supports IPv6, you can access IPv6 contents from IPv4 network with this enabled.</string>
     <string name="udp_proxy">UDP Forwarding</string>
-    <string name="udp_proxy_sum">Forward UDP packets to badvpn-udpgw via SOCKS5. This needs badvpn-udpgw running on the remote server (normally listening on 127.0.0.1) to work.</string>
+    <string name="udp_proxy_sum">Forward UDP packets to badvpn-udpgw via CSNet. This needs badvpn-udpgw running on the remote server (normally listening on 127.0.0.1) to work.</string>
     <string name="udp_gw">UDP Gateway (Remote)</string>
 
     <string name="authentication">Authentication</string>
@@ -40,7 +40,7 @@
 
     <string name="err_add_prof">Failed to add profile %s</string>
     <string name="err_del_prof">Error deleting profile %s</string>
-    <string name="notify_title">SOCKS5 proxy activated</string>
+    <string name="notify_title">CSNet proxy activated</string>
     <string name="notify_msg">Connected to %s</string>
     <string name="channel_name">Proxy active</string>
 
