--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -31,7 +31,7 @@
     <string name="adv_app_bypass">旁路模式</string>
     <string name="adv_app_bypass_sum">启用该选项可使选定的应用不被代理，其他所有应用被代理。</string>
     <string name="adv_app_list">应用列表</string>
-    <string name="adv_app_list_sum">输入App的包名，每行一个。可以在“设置>应用管理>右上角详情”里面看到包名（形如“com.android.chrome”）。</string>
+    <string name="adv_app_list_sum">选择要代理或绕过代理的应用。</string>
 
     <string name="prof_add">新增配置</string>
     <string name="prof_del">删除配置</string>
