--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -23,7 +23,7 @@
     <string name="advanced">高级</string>
     <string name="adv_route">路由</string>
     <string name="adv_route_all">全部（默认）</string>
-    <string name="adv_route_non_chn">不代理国内IP（当前版本不可用）</string>
+    <string name="adv_route_non_chn">不代理国内IP</string>
     <string name="adv_dns">DNS服务器</string>
     <string name="adv_dns_port">DNS端口（TCP）</string>
     <string name="adv_auto_connect">开机自动连接</string>
