--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="advanced">Advanced</string>
     <string name="adv_route">Route</string>
     <string name="adv_route_all">All (Default)</string>
-    <string name="adv_route_non_chn">Non-Chinese IPs (not available at current version)</string>
+    <string name="adv_route_non_chn">Non-Chinese IPs</string>
     <string name="adv_dns">DNS Server</string>
     <string name="adv_dns_port">DNS Port (TCP)</string>
     <string name="adv_auto_connect">Connect on Boot</string>
