--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="prof_default">Default</string>
 
     <string name="connection">Connection</string>
-    <string name="server_ip">Server IP</string>
+    <string name="server_ip">Server Host</string>
     <string name="server_port">Local Port</string>
     <string name="ipv6_proxy">IPv6</string>
     <string name="ipv6_proxy_sum">Enable IPv6 forwarding. If the server supports IPv6, you can access IPv6 contents from IPv4 network with this enabled.</string>
@@ -43,5 +43,7 @@
     <string name="notify_title">CSNet proxy activated</string>
     <string name="notify_msg">Connected to %s</string>
     <string name="channel_name">Proxy active</string>
+
+    <string name="cannot_resolve_host">Cannot resolve server host: %s</string>
 
 </resources>
