--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,8 @@
     <string name="adv_route">Route</string>
     <string name="adv_route_all">All (Default)</string>
     <string name="adv_route_non_chn">Non-Chinese IPs</string>
-    <string name="adv_dns">DNS Server</string>
-    <string name="adv_dns_port">DNS Port (TCP)</string>
+    <string name="adv_dns">DNS over HTTPS (DoH) Server</string>
+    <string name="adv_dns_port">Local DNS Port</string>
     <string name="adv_auto_connect">Connect on Boot</string>
     <string name="adv_per_app">Per-app Proxy</string>
     <string name="adv_app_bypass">Bypass Mode</string>
