--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CSNetDroid</string>
+    <string name="app_name">CSNetDroid v3</string>
 
     <string name="profile">配置文件</string>
     <string name="prof_default">默认</string>
