在界面上显示app版本和csnet版本

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,7 @@
     <string name="channel_name">Proxy active</string>
 
     <string name="cannot_resolve_host">Cannot resolve server host: %s</string>
+    <string name="csnet_version">CSNet Binary Version</string>
+    <string name="csnet_version_unkonwn">Fail to read</string>
 
 </resources>
