--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -44,5 +44,7 @@
     <string name="notify_msg">已连接到%s</string>
     <string name="channel_name">代理启用通知</string>
     <string name="cannot_resolve_host">解析服务器域名失败: %s</string>
+    <string name="csnet_version">CSNet程序版本</string>
+    <string name="csnet_version_unkonwn">读取失败</string>
 
 </resources>
